--- a/about-html/testOuterHTML.html
+++ b/about-html/testOuterHTML.html
@@ -10,12 +10,14 @@
       display: flex;
     }
     .box {
-      background: pink
+      background: pink;
+      background-image: url('https://111tx2.a.yximgs.com/upic/2020/03/22/20/BMjAyMDAzMjIyMDU5MDdfMTI3Mzg2Nzc2OF8yNTQwMjYzMTM2Ml8xXzM=_Bc79526916adf8d0d9f92318102b6038a.jpg?clientCacheKey=3xubzrjbfkjc3nu.jpg&di=676bdb84&bp=10000');
+      filter: brightness(1);
     }
     .box:nth-child(1) {
       flex: 1;
       /* overflow: hidden; */
-      background: gold
+      background-color: gold;
     }
   </style>
 </head>
